--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "firebase": "^9.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
+    "react-stepper-horizontal": "^1.0.11",
     "react-toastify": "^9.1.2",
     "web-vitals": "^2.1.4"
   },
